cmake_minimum_required(VERSION 3.10)

project(AlgorithmLearning)

set(CMAKE_CXX_STANDARD 14)

# aux_source_directory(. SRC_DIR)
# add_executable(${PROJECT_NAME} ${SRC_DIR})
# include_directories(${CMAKE_SOURCE_DIR}/include)

# find_package(Threads REQUIRED)
# target_link_libraries(${PROJECT_NAME} Threads::Threads )
add_subdirectory(./CPP_Solution/middle)
